objects/Veda_Account__c.object
<CustomObject>
    <fields>
        <fullName>DefaultAssociationCeaseDate__c</fullName>
        <label>DefaultAssociationCeaseDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Association_Start_Date__c</fullName>
        <label>Default Association Start Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_credit_provider_classification__c</fullName>
        <label>Original credit provider classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veda_Comprehensive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Veda Comprehensive</label>
        <referenceTo>Veda_Comprehensive__c</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>accountId__c</fullName>
        <label>accountId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>account_Closed_Date__c</fullName>
        <label>account Closed Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>account_Data_Level__c</fullName>
        <label>account Data Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>account_Holder_Count__c</fullName>
        <label>account Holder Count</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>account_Open_Date__c</fullName>
        <label>account Open Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>account_Reopen_Date__c</fullName>
        <label>account Reopen Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>account_Type_Code__c</fullName>
        <label>account Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>account_Type__c</fullName>
        <label>account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>associationInformationDefaultAssociation__c</fullName>
        <label>associationInformationDefaultAssociation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>associationInformationIsSeriousCreditInf__c</fullName>
        <label>associationInformationIsSeriousCreditInf</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>associationInformationLatestCeasedDate__c</fullName>
        <label>associationInformationLatestCeasedDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>associationInformationLatestStartDate__c</fullName>
        <label>associationInformationLatestStartDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>associationInformationSciDate__c</fullName>
        <label>associationInformationSciDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>date_Last_Changed__c</fullName>
        <label>date Last Changed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_Unlimited_Credit__c</fullName>
        <label>is Unlimited Credit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>latestMaximumAmountCreditCurrencyCode__c</fullName>
        <label>latestMaximumAmountCreditCurrencyCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>latestMaximumAmountCredit__c</fullName>
        <label>latestMaximumAmountCredit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>latest_Credit_Provider_Is_Licensee__c</fullName>
        <label>latest Credit Provider Is Licensee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>latest_Credit_Provider_Name__c</fullName>
        <label>latest Credit Provider Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>latest_Credit_provider_classification__c</fullName>
        <label>latest Credit provider classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>latest_Update_Date__c</fullName>
        <label>latest Update Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan_Payment_Method_Code__c</fullName>
        <label>loan Payment Method Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan_Payment_Method__c</fullName>
        <label>loan Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>originalMaximumAmountCreditCurrencyCode__c</fullName>
        <label>originalMaximumAmountCreditCurrencyCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>original_Credit_Provider_Is_Licensee__c</fullName>
        <label>original Credit Provider Is Licensee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>original_Credit_Provider_Name__c</fullName>
        <label>original Credit Provider Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>original_Maximum_Amount_Credit__c</fullName>
        <label>original Maximum Amount Credit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>relationship_Code__c</fullName>
        <label>relationship Code</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>relationship__c</fullName>
        <label>relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>secured_Credit_Code__c</fullName>
        <label>secured Credit Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>secured_Credit__c</fullName>
        <label>secured Credit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>term_Of_Loan__c</fullName>
        <label>term Of Loan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>term_Type_Code__c</fullName>
        <label>term Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>term_Type__c</fullName>
        <label>term Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Veda Account</label>
    <nameField>
        <label>Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Veda Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>